--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "MAPBOX_ACCESS_TOKEN", '"pk.eyJ1IjoiYXJ0ZW0taW5rYXoiLCJhIjoiY2wweGJnNzBvMTJ2cDNicGVqZDR1ODFzbyJ9.bUnFpnNTyIsVLR6OwlIIzQ"')
     }
 
     buildTypes {
@@ -29,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -37,6 +41,28 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+
+    implementation 'com.mapbox.maps:android:10.2.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.11.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:9.5.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:5.1.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.42.6'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.42.6'
+//    implementation "com.mapbox.navigation:android:2.3.0"
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-core:3.0.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-localization-v7:0.8.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-offline-v7:0.4.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-places-v9:0.12.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-turf:5.6.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.9.0'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-markerview-v9:0.4.0'
+    implementation ('com.mapbox.mapboxsdk:mapbox-android-sdk:9.2.0@aar'){
+        transitive=true
+    }
+
+    //ViewBinding
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.4.6'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
