--- a/app/.gitignore
+++ b/app/.gitignore
@@ -86,6 +86,7 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+app/src/main/res/values/developer-config.xml
 
 # Android Profiling
 *.hprof
