--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,33 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.0' apply false
     id 'com.android.library' version '7.1.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
 }
-
+//allprojects {
+//    repositories {
+//        maven {
+//            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+//            authentication {
+//                basic(BasicAuthentication)
+//            }
+//            credentials {
+//                // Do not change the username below.
+//                // This should always be `mapbox` (not your username).
+//                username = "mapbox"
+//                // Use the secret token you stored in gradle.properties as the password
+//                password = project.properties['MAPBOX_DOWNLOADS_TOKEN'] ?: ""
+//            }
+//        }
+//    }
+//}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
