--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
 
     implementation("com.google.android.gms:play-services-location:18.0.0")
 
+    implementation "com.mapbox.search:mapbox-search-android-ui:1.0.0-beta.27"
+    implementation "com.mapbox.search:mapbox-search-android:1.0.0-beta.27"
+
     //ViewBinding
     implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.4.6'
 
